applications/rollout-canary-app/templates/01-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rollout-canary-stable
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: rollout-canary
---
apiVersion: v1
kind: Service
metadata:
  name: rollout-canary
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: rollout-canary
